feat(appointment-pack): implement appointment pack generation, rendering, and service feat(appointment-pack): add appointment pack html and css files